--- a/src/app/Views/Home/Index.cshtml
+++ b/src/app/Views/Home/Index.cshtml
@@ -36,6 +36,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.FirstOrDefault().Price)
                 </th>
+                <th>Current Price</th>
         </tr>
     </thead>
     <tbody>
@@ -63,6 +64,13 @@
                 @if (@item.Tool != "")
                 {
                 @Html.DisplayFor(modelItem => item.Price)
+                }
+            </td>
+            <td>
+                @if (@item.Tool != "")
+                {
+                    <span> @item.CurrentPrice |</span>
+                    <a asp-action="Buy" asp-route-stock="@item.Stock" asp-route-price="@item.CurrentPrice">Buy</a>
                 }
             </td>
         </tr>
